syntax = "proto3";
option cc_enable_arenas = true;

package NFq.NConfig;
option java_package = "ru.yandex.kikimr.proto";

////////////////////////////////////////////////////////////

message TQuotaLimit {
    string Name = 1;
    uint64 Limit = 2;
}

message TQuotaList {
    string SubjectType = 1;
    string SubjectId = 2;
    repeated TQuotaLimit Limit = 3;
}

message TQuotaDescriptionConfig {
    string SubjectType = 1;
    string MetricName = 2;
    uint64 DefaultLimit = 3;
    uint64 HardLimit = 4;
};

message TQuotasManagerConfig {
    bool Enabled = 1;
    repeated TQuotaList Quotas = 2;
    repeated TQuotaDescriptionConfig QuotaDescriptions = 3;
    string LimitRefreshPeriod = 4;
    string UsageRefreshPeriod = 5;
    bool EnablePermissions = 6;
}
